@@ -160,6 +160,9 @@
 #log_type notice
 #log_type information
 
+# If set to true, add a timestamp value to each log message.
+#log_timestamp true
+
 # =================================================================
 # Security
 # =================================================================
